--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -46,3 +46,24 @@ a {
 ul {
   list-style-type: none;
 }
+
+/* My solution */
+ul {
+  padding: 0;
+}
+.header{
+  padding: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.left-header, 
+.right-header{
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.links{
+  display: flex;
+  gap: 8px;
+}
