--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -64,3 +64,26 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+
+
+/* My solution */
+.modal{
+  display: flex;
+  padding: 15px;
+  gap:15px; 
+}
+.icon{
+  flex: 0 0 auto;
+}
+.first-line{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header{
+  font-weight: bold;
+  font-size: 20px;
+}
+.text{
+  margin: 15px 0px;
+}
