--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,35 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* My solution */
+
+body{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.header, .footer{
+  display: flex;
+  justify-content: space-between;
+}
+.footer{
+  background-color: rgba(219, 216, 216, 0.801);
+}
+.left-links, .right-links{
+  list-style-type: none;
+  padding: 0;
+  margin: 20px;
+  display: flex;
+  gap: 20px;
+}
+a{
+  text-decoration: none;
+  color: #000;
+}
+.content {
+  text-align: center;
+}
+button{
+  padding: 10px;
+}
